
    <resources>
        <string name="login_button_text">Login</string>
        <string name="register_button_text">Register</string>
        <string name="search_button_text">Search</string>
        <string name="search_edit_hint">Search for any game..</string>
        <string name="search_results_activity_name">Search results</string>
        <string name="game_page_activity_name"></string>
        <string name="tab_info_activity_name">info</string>
        <string name="tab_videos_activity_name">videos</string>
        <string name="tab_soundtrack_activity_name">soundtrack</string>
        <string name="tab_reviews_activity_name">reviews</string>
        <string name="game_name"/>
        <string name="app_name">GameWare</string>
        <string name="characters_page_activity_name">Characters</string>
        <string name="locations_page_activity_name">Locations</string>
        <string name="username_label">Username</string>
        <string name="username_hint">Enter your username..</string>
        <string name="password_hint">Enter your password..</string>
        <string name="login_button">Login</string>
        <string name="rememeber_credentials">Remeber credentials</string>
        <string name="register_button">Register</string>
        <string name="register_data_label">Register data:</string>
        
        
        <string name="login_data_label">Login data:</string><string name="error_username_exists">Username already exits!</string><string name="error_invalid_username">Invalid username!</string>
        <string name="error_empty_password">Empty password!</string>
        <string name="error_empty_username">Empty username!</string>
        <string name="error_wrong_password">Wrong password!</string>
        <string name="error_user_inexistent">User not registered!</string>
        <string name="saudation_label">Welcome </string>
        <string name="bookmarks_button_text">Bookmarks</string>
        <string name="gamewareapp_activity_name">GameWare</string>
        <string name="login_activity_name">Login</string>
        <string name="register_activity_name">Register</string>
        <string name="logout_button_text">Logout</string>
        <string name="story_page_activity_name">Description</string>
        <string name="check_form">Invalid username or password</string>
        <string name="bookmarks_page_activity_name">Bookmarks</string>
        <string name="music_stream_page_activity">Grooveshark</string>
        <string name="character_page_activity">Character Page</string>
        <string name="location_page_activity_name">Location Page</string>
    </resources>
